Include FontAwesome glyphs, add more links in footer

--- a/sass.scss
+++ b/sass.scss
@@ -45,4 +45,8 @@ footer {
     background: $brand-default;
     color: white;
     margin-top: 50px;
+
+    a, a:hover, a:active, a:focus {
+        color: inherit;
+    }
 }
