Change color on languages section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,9 +10,9 @@
 
 .verticalCenter { width: 100%; padding: 0 20px; text-align: center; }
 
-.containerPanel { padding-top: 50px; padding-bottom: 50px; }
+.containerPanel { padding-top: 50px; padding-bottom: 50px; font-size: 24px; }
 
-#languages { width: 100%; color: white; font-size: 2rem; background: #44c4a4; background: -moz-linear-gradient(45deg, #44c4a4 0%, #a6f5e1 100%); background: -webkit-gradient(left bottom, right top, color-stop(0%, #44c4a4), color-stop(100%, #a6f5e1)); background: -webkit-linear-gradient(45deg, #44c4a4 0%, #a6f5e1 100%); background: -o-linear-gradient(45deg, #44c4a4 0%, #a6f5e1 100%); background: -ms-linear-gradient(45deg, #44c4a4 0%, #a6f5e1 100%); background: linear-gradient(45deg, #44c4a4 0%, #a6f5e1 100%); filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#44c4a4', endColorstr='#a6f5e1', GradientType=1 ); }
+#languages { width: 100%; color: white; font-size: 2rem; /*--Gradient background--*/ background: #e64a55; /* Old browsers */ background: -moz-linear-gradient(45deg, #e64a55 0%, #f67c6f 100%); /* FF3.6+ */ background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, #e64a55), color-stop(100%, #f67c6f)); /* Chrome,Safari4+ */ background: -webkit-linear-gradient(45deg, #e64a55 0%, #f67c6f 100%); /* Chrome10+,Safari5.1+ */ background: -o-linear-gradient(45deg, #e64a55 0%, #f67c6f 100%); /* Opera 11.10+ */ background: -ms-linear-gradient(45deg, #e64a55 0%, #f67c6f 100%); /* IE10+ */ background: linear-gradient(45deg, #e64a55 0%, #f67c6f 100%); /* W3C */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e64a55', endColorstr='#f67c6f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */ }
 
 footer { padding: 50px 0; background: #373a3c; color: white; }
 
