--- a/sass.scss
+++ b/sass.scss
@@ -42,6 +42,7 @@ $headerHeight: 500px;
 .containerPanel {
     padding-top: 50px;
     padding-bottom: 50px;
+    font-size: 24px;
 }
 
 #languages {
@@ -49,14 +50,15 @@ $headerHeight: 500px;
     color: white;
     font-size: 2rem;
 
-    background: rgba(68,196,164,1);
-    background: -moz-linear-gradient(45deg, rgba(68,196,164,1) 0%, rgba(166,245,225,1) 100%);
-    background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(68,196,164,1)), color-stop(100%, rgba(166,245,225,1)));
-    background: -webkit-linear-gradient(45deg, rgba(68,196,164,1) 0%, rgba(166,245,225,1) 100%);
-    background: -o-linear-gradient(45deg, rgba(68,196,164,1) 0%, rgba(166,245,225,1) 100%);
-    background: -ms-linear-gradient(45deg, rgba(68,196,164,1) 0%, rgba(166,245,225,1) 100%);
-    background: linear-gradient(45deg, rgba(68,196,164,1) 0%, rgba(166,245,225,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#44c4a4', endColorstr='#a6f5e1', GradientType=1 );
+	/*--Gradient background--*/
+	background: #e64a55; /* Old browsers */
+	background: -moz-linear-gradient(45deg,  #e64a55 0%, #f67c6f 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%,#e64a55), color-stop(100%,#f67c6f)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(45deg,  #e64a55 0%,#f67c6f 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(45deg,  #e64a55 0%,#f67c6f 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(45deg,  #e64a55 0%,#f67c6f 100%); /* IE10+ */
+	background: linear-gradient(45deg,  #e64a55 0%,#f67c6f 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e64a55', endColorstr='#f67c6f',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
 }
 
 footer {
