--- a/sass.scss
+++ b/sass.scss
@@ -54,7 +54,8 @@ $headerHeight: 500px;
 .containerPanel {
     padding-top: 50px;
     padding-bottom: 50px;
-    font-size: 24px;
+    font-size: 16px;
+    text-align: center;
 }
 
 #languages {
