--- a/stylesheet.css
+++ b/stylesheet.css
@@ -89,6 +89,13 @@ html, body {
   font-size: 2rem;
 }
 
+#project-tll {
+  background: url("img/tll.jpg");
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
 footer {
   padding: 50px 0;
   background: #373a3c;
