--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@
 
 h1 {
   font-family: 'Rubik', sans-serif;
+  font-size: 64px;
 }
 
 .nodisplay {
@@ -38,13 +39,70 @@ h1 {
   }
 }
 
-@media (max-width: 1024px) {
+.section {
+  --padding: 60px;
+  padding-top: var(--padding);
+  padding-bottom: var(--padding);
+}
+
+.skill-card {
+  text-align: center;
+  padding: 0 10px;
+  height: 350px;
+  margin-bottom: 20px;
+}
+
+.skill-card .inner-container {
+  height: 100%;
+  padding: 30px;
+  margin: 0 auto;
+  border: 1px solid #D4D4D4;
+  border-radius: 10px;
+}
+
+.skill-card .icon {
+  color: var(--primary-color);
+  font-size: 72px;
+}
+
+.skill-card .name {
+  color: var(--primary-color);
+  font-size: 32px;
+}
+
+@media (max-width: 991px) {
+  #main-header {
+    text-align: center;
+    height: 450px;
+  }
   #main-header h1 {
     font-size: 48px;
   }
+  .skill-card .icon {
+    font-size: 52px;
+  }
+  .skill-card .name {
+    font-size: 24px;
+  }
 }
 
-@media (max-width: 512px) {
+@media (max-width: 767px) {
+  #main-header h1 {
+    font-size: 36px;
+  }
+  .skill-card {
+    height: auto;
+    margin-bottom: 10px;
+  }
+  .skill-card .icon {
+    font-size: 72px;
+  }
+  .skill-card .name {
+    font-size: 32px;
+  }
+}
+
+@media (max-width: 320px) {
   #main-header h1 {
     font-size: 24px;
   }
