--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 :root {
   --primary-color: #68DFB7;
+  --footer-color: #ED5B76;
 }
 
 h1 {
@@ -70,6 +71,37 @@ h1 {
   font-size: 32px;
 }
 
+.cherry-blossom {
+  height: 600px;
+  background: url("img/cherryblossom.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+footer {
+  padding: 50px 0;
+}
+
+footer .footer-link {
+  text-align: center;
+}
+
+footer .footer-link .icon {
+  font-size: 42px;
+  color: var(--footer-color);
+}
+
+footer .footer-link a {
+  color: var(--footer-color);
+  border-bottom: 1px dashed;
+  transition: 300ms all;
+}
+
+footer .footer-link a:hover {
+  text-decoration: none;
+  padding-bottom: 4px;
+}
+
 @media (max-width: 991px) {
   #main-header {
     text-align: center;
@@ -99,6 +131,12 @@ h1 {
   }
   .skill-card .name {
     font-size: 32px;
+  }
+  .cherry-blossom {
+    height: 400px;
+  }
+  footer .footer-link {
+    margin-bottom: 30px;
   }
 }
 
