--- a/sass.scss
+++ b/sass.scss
@@ -9,6 +9,12 @@ body { color: var(--text-color); }
 h1 {
   font-family: 'Rubik', sans-serif;
   font-size: 64px;
+  font-weight: normal;
+}
+
+h2 {
+  font-family: 'Rubik', sans-serif;
+  font-weight: normal;
 }
 
 .nodisplay { display: none; }
