--- a/sass.scss
+++ b/sass.scss
@@ -20,8 +20,11 @@ h2 {
 .nodisplay { display: none; }
 .opacity0 { opacity: 0; }
 
+.img-section { background-attachment: fixed; }
+
 #main-header {
   background: url("img/banner.jpg") left;
+  background-attachment: fixed;
   color: white;
   display: flex;
   align-items: center;
@@ -88,6 +91,7 @@ h2 {
   background: url("img/cherryblossom.jpg");
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
 }
 
 footer {
