--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,7 +33,7 @@ h2 {
 
 #main-header {
   background-image: url("img/banner.jpg");
-  background-position: left;
+  background-size: cover;
   color: white;
   display: flex;
   align-items: center;
@@ -107,6 +107,7 @@ h2 {
 .cherry-blossom {
   background-image: url("img/cherryblossom.jpg");
   background-position: center;
+  background-size: cover;
 }
 
 footer {
