--- a/sass.scss
+++ b/sass.scss
@@ -1,7 +1,13 @@
 :root {
   --primary-color: #68DFB7;
   --footer-color: #ED5B76;
-  --text-color: #222222;
+  --text-color: #454545;
+}
+
+@mixin center-child-both {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 body { color: var(--text-color); }
@@ -10,6 +16,8 @@ h1 {
   font-family: 'Rubik', sans-serif;
   font-size: 64px;
   font-weight: normal;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 h2 {
@@ -24,7 +32,6 @@ h2 {
 
 #main-header {
   background-image: url("img/banner.jpg");
-  background-size: cover;
   color: white;
   display: flex;
   align-items: center;
@@ -33,7 +40,7 @@ h2 {
   padding-top: var(--padding);
   padding-bottom: var(--padding);
 
-  h1 { font-size: 64px; }
+  h1 { font-size: 72px; margin: 0; }
 
   .selected-text {
     color: var(--text-color);
@@ -86,16 +93,38 @@ h2 {
   }
 }
 
+#coding-projects {
+  --accent-color: #62A4EC;
+  .icon-container {
+    @include center-child-both;
+    .icon {
+      @include center-child-both;
+      width: 150px;
+      height: 150px;
+      background: var(--accent-color);
+      border-radius: 50%;
+      font-size: 64px;
+      color: white;
+    }
+  }
+
+  h2 { color: var(--accent-color); }
+
+  h3 {
+    font-size: 16px;
+    color: lighten(#454545, 25%);
+  }
+}
+
 .img-section {
   background-attachment: fixed;
+  background-size: cover;
   height: 400px;
 }
 
-.cherry-blossom {
-  background-image: url("img/cherryblossom.jpg");
-  background-position: center;
-  background-size: cover;
-}
+.watermelons { background-image: url("img/watermelons.jpg"); }
+
+.cherry-blossom { background-image: url("img/cherryblossom.jpg"); }
 
 footer {
   padding: 50px 0;
