--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 :root {
   --primary-color: #68DFB7;
   --footer-color: #ED5B76;
-  --text-color: #222222;
+  --text-color: #454545;
 }
 
 body {
@@ -12,6 +12,8 @@ h1 {
   font-family: 'Rubik', sans-serif;
   font-size: 64px;
   font-weight: normal;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
 h2 {
@@ -33,7 +35,6 @@ h2 {
 
 #main-header {
   background-image: url("img/banner.jpg");
-  background-size: cover;
   color: white;
   display: flex;
   align-items: center;
@@ -43,7 +44,8 @@ h2 {
 }
 
 #main-header h1 {
-  font-size: 64px;
+  font-size: 72px;
+  margin: 0;
 }
 
 #main-header .selected-text {
@@ -99,15 +101,49 @@ h2 {
   font-size: 32px;
 }
 
+#coding-projects {
+  --accent-color: #62A4EC;
+}
+
+#coding-projects .icon-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#coding-projects .icon-container .icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  height: 150px;
+  background: var(--accent-color);
+  border-radius: 50%;
+  font-size: 64px;
+  color: white;
+}
+
+#coding-projects h2 {
+  color: var(--accent-color);
+}
+
+#coding-projects h3 {
+  font-size: 16px;
+  color: #858585;
+}
+
 .img-section {
   background-attachment: fixed;
+  background-size: cover;
   height: 400px;
+}
+
+.watermelons {
+  background-image: url("img/watermelons.jpg");
 }
 
 .cherry-blossom {
   background-image: url("img/cherryblossom.jpg");
-  background-position: center;
-  background-size: cover;
 }
 
 footer {
