--- a/sass.scss
+++ b/sass.scss
@@ -94,7 +94,18 @@ h2 {
 }
 
 #coding-projects {
-  --accent-color: #62A4EC;
+  --accent-color: #55B6EC;
+
+  a { color: var(--accent-color); }
+
+  h2 { color: var(--accent-color); }
+
+  h3 {
+    b { color: lighten(#454545, 10%); }
+    font-size: 16px;
+    color: lighten(#454545, 30%);
+  }
+
   .icon-container {
     @include center-child-both;
     height: 100%;
@@ -108,14 +119,6 @@ h2 {
       font-size: 64px;
       color: white;
     }
-  }
-
-  h2 { color: var(--accent-color); }
-
-  h3 {
-    b { color: lighten(#454545, 10%); }
-    font-size: 16px;
-    color: lighten(#454545, 30%);
   }
 
   .line {
