--- a/stylesheet.css
+++ b/stylesheet.css
@@ -102,7 +102,24 @@ h2 {
 }
 
 #coding-projects {
-  --accent-color: #62A4EC;
+  --accent-color: #55B6EC;
+}
+
+#coding-projects a {
+  color: var(--accent-color);
+}
+
+#coding-projects h2 {
+  color: var(--accent-color);
+}
+
+#coding-projects h3 {
+  font-size: 16px;
+  color: #929292;
+}
+
+#coding-projects h3 b {
+  color: #5f5f5f;
 }
 
 #coding-projects .icon-container {
@@ -123,19 +140,6 @@ h2 {
   border-radius: 50%;
   font-size: 64px;
   color: white;
-}
-
-#coding-projects h2 {
-  color: var(--accent-color);
-}
-
-#coding-projects h3 {
-  font-size: 16px;
-  color: #929292;
-}
-
-#coding-projects h3 b {
-  color: #5f5f5f;
 }
 
 #coding-projects .line {
